test/cases/compile_errors/zon/addr_slice.zon
.{
    .value = &.{ 1, 2, 3 },
}
